# unicode_font

./: Cargo.toml  README.md  TODO.md
builder/: Cargo.toml  TODO.md
builder/src/: lib.rs  main.rs
docs/: index.html  unicode_font_playground-23dd0fd1ed938937.js  unicode_font_playground-23dd0fd1ed938937_bg.wasm  unicode_font_playground-3355c27fff77fe8a.js  unicode_font_playground-3355c27fff77fe8a_bg.wasm
playground/: CHAGELOG.md  Cargo.toml  README.md  index.html  justfile
playground/builder/src/: main.rs
playground/src/: main.rs
src/: arabic_mathematical.extension  arabic_mathematical_initial.extension  bold  bold.extension  bold_fraktur  bold_italic  bold_script  circled.extension  comma.extension  double_struck  double_struck_italic.extension  fraktur.extension  full_stop  full_stop.extension  fullwidth.extension  italic.extension  lib.rs  looped.extension  mathematical_script  monospace.extension  negative_circled.extension  negative_squared.extension  other  parenthesized.extension  plain  plain.extension  regional.extension  sans_serif.extension  sans_serif_bold.extension  sans_serif_bold_italic.extension  sans_serif_italic  script  segmented.extension  small_capital.extension  squared.extension  stretched  subscript.extension  superscript.extension  tailed  variant.rs  (+1 more)
unidata/: Extension - Backup.txt  Extension.txt  Variants.txt
