[package]
name = "unicode_font"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.25", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
paste = "1.0"

[features]
default = ["extension"]
extension = []
