[package]
name = "unicode_font"
version = "0.1.1"
edition = "2021"
authors = ["Raimundo Saona <rasa200@gmail.com>"]
license = "MIT OR Apache-2.0 OR CC0-1.0"
readme = "README.md"
repository = "https://github.com/saona-raimundo/unicode_font"
documentation = "https://docs.rs/unicode_font"
homepage = "https://crates.io/crates/unicode_font"
description = "Convert unicode characters between fonts."
keywords = ["unicode", "font"]
categories = ["value-formatting", "text-processing", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
strum = { version = "0.25", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
paste = "1.0"

[features]
default = ["extension"]
extension = []
