[package]
name = "unicode_font_playground"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.0", features = ["csr"] }
unicode_font = { path = ".." }
